# filerskeepers-project

./: .env.example  .gitignore  CLAUDE.md  PROJECT.md  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
filerkeepers/application/: settings.py
filerskeepers/: __init__.py  main.py
filerskeepers/application/: __init__.py  app.py  logging.py  rate_limiting.py  settings.py
filerskeepers/auth/: __init__.py  dependencies.py  dtos.py  models.py  repositories.py  services.py
filerskeepers/books/: __init__.py  dependencies.py  dtos.py  models.py  repositories.py  services.py  tasks.py
filerskeepers/clients/: __init__.py
filerskeepers/crawler/: __init__.py  dependencies.py  dtos.py  models.py  parser.py  repositories.py  services.py  tasks.py
filerskeepers/db/: mongo.py  redis.py
filerskeepers/ping/: __init__.py  dtos.py  services.py
filerskeepers/queue/: __init__.py  arq.py  base.py  workers.py
filerskeepers/scripts/: run_crawl.py  start_crawl.py
filerskeepers/utils/: __init__.py
filerskeepers/web/auth/: __init__.py  api.py
filerskeepers/web/books/: api.py
filerskeepers/web/ping/: __init__.py  api.py
local/: autoformat.sh  static_analysis.sh
tests/: base.py  conftest.py
tests/auth/: test_services.py
tests/books/: test_services.py  test_tasks.py
tests/crawler/: test_tasks.py
tests/ping/: test_services.py
tests/web/: test_api.py  test_auth.py  test_books.py  test_ping.py
