[project]
name = "filerskeepers-project"
version = "0.1.0"
description = "This is a file crawling project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arq>=0.26.3",
    "beanie>=2.0.0",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.119.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "motor>=3.7.1",
    "pydantic>=2.12.1",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "redis>=5.3.1",
    "tenacity>=9.1.2",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.0",
    "testcontainers>=4.13.2",
]
