[project]
name = "filerskeepers-project"
version = "0.1.0"
description = "This is a file crawling project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arq>=0.26.3",
    "beanie>=2.0.0",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.119.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "motor>=3.7.1",
    "pydantic>=2.12.1",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "redis>=5.3.1",
    "tenacity>=9.1.2",
    "uvicorn>=0.37.0",
    "watchfiles>=1.1.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.0",
    "testcontainers>=4.13.2",
    "types-python-dateutil>=2.9.0.20251008",
    "typing-extensions>=4.15.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
target-version = "py313"
exclude = [
    "git",
    "venv",
    ".venv",
    "./venv",
    "__pycache__",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
]
line-length = 88
indent-width = 4
include = ["pyproject.toml", "filerskeepers/**/*.py", "scripts/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "SIM", "TID252", "RUF100", "E501", "PLC"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = true
split-on-trailing-comma = true
force-sort-within-sections = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*"
]
